add simple admin token to return UUID when passed as header
